--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -101,7 +101,7 @@ body {
 main .container {
     width: 60%;
     background-color: var(--bool-white);
-    margin-left: auto;
+    margin: auto;
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     font-family: 'Mulish', sans-serif;
@@ -114,19 +114,24 @@ div#options {
 }
 
 div#options #btn_newtask {
-    background-color: var(--bool-primary);
+    background-color: var(--bool-editorial);
     color: white;
-    border: 0;
+    border: 2px;
     padding: 7px;
     border-radius: 5px;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0);
 }
 
 div#options #btn_newsection {
-    background-color: #fff;
-    color: lightgray;
-    border: 1px solid lightgray;
-    padding: 6px;
+  
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
     border-radius: 5px;
+    box-shadow: 0 6px 6px rgba(0, 0, 0, 0);
+    color: lightgray;
 }
 
 .item-type {
